Updated the path

--- a/Assets/gallery.html
+++ b/Assets/gallery.html
@@ -1,16 +1,31 @@
+<!DOCTYPE html>
 <html>
+<!--
+Author		: Ramaguru Radhakrishnan
+Created Date	: 26-Mar-2023
+Updated 	: 27-Mar-2023
+Description 	: RACAMBT-2023: Events Gallery
+-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<head>
 		<title>RACAMBT - 2023</title>
 	</head>
 	<body>
-		<center><h1>RACAMBT - 2023</h1>
+		<center>
+			<h1>RACAMBT - 2023</h1>
+			<h3>Event Gallery</h3>
 			<div>
 				<img id="gal" width="1200"/>
 			</div>
 		</center>
 		<script>
 			var imgArray = [
-	
+				'images/', 'images/', 'images/', 'images/', 'images/',
+				'images/', 'images/', 'images/', 'images/', 'images/',
+				'images/', 'images/', 'images/', 'images/', 'images/',
+				'images/', 'images/', 'images/', 'images/', 'images/',
+				'images/', 'images/', 'images/', 'images/', 'images/',
 			];
 			var curIndex = 0;
 			var imgDuration = 1500;
